<resources>
    <string name="app_name">MacdonaldApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="big_mac">Big Mac</string>
    <string name="double_cheeseburger">Double Cheeseburger</string>
    <string name="double_quarter_pounder_with_cheese">Double Quarter Pounder®* with Cheese</string>
    <string name="mcdouble">McDouble®</string>
    <string name="subtotal">Subtotal: %s</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="quantity">QUANTITY</string>
    <string name="total">Total: %s</string>
    <string name="next">Next</string>
    <string name="cheeseburger">Cheeseburger</string>
    <string name="cancel">Cancel</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s cupcakes \n Flavor: %2$s \nPickup date: %3$s \n Total: %4$s \n\n Thank you!</string>
    />
</resources>